--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
+  margin: 0 auto;
   text-align: center;
+  width: 70vw;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.celebritiesTable {
+  width: 100%;
+  border-collapse: collapse;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th {
+  background-color: lightgray;
+  border: none;
+  padding: 50px;
+  font-size: 1.5rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+tr {
+  border: 1px solid lightgray;
+}
+td {
+  padding: 10px 0;
+  font-size: 1.2rem;
+}
+td img {
+  border-radius: 20px;
+  width: 100px;
+}
+.btn-row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-wrap: wrap;
+}
+.btn {
+  background-color: grey;
+  padding: 15px 20px;
+  margin: 50px 10px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: bold;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
